add_subdirectory( ex.base64 )
add_subdirectory( ex.base64_dynamic )
add_subdirectory( 0.helloworld )
add_subdirectory( 1.basics )
add_subdirectory( 4.memory_management )
add_subdirectory( 2.forward_declare )
add_subdirectory( 3.linkage )
add_subdirectory( 5.pointer_reference )
add_subdirectory( 6.perfect_forwarding )
add_subdirectory( 7.multi_threading )
add_subdirectory( 8.pointer_cast )
add_subdirectory( 9.entry_point )
add_subdirectory( 10.polymorphism )
add_subdirectory( 11.multiInher_polymorph )
add_subdirectory( 12.member_offset )