function( AddExecutable projectName filter )
    project( ${projectName} )
    add_executable( ${projectName} )
    SET_TARGET_PROPERTIES ( ${projectName} PROPERTIES FOLDER ${filter} )
    project( ${filter} )
    add_subdirectory( ${projectName} )
endfunction(AddExecutable)

function( AddLibrary projectName Type  filter )
    project( ${projectName} )
    add_library( ${projectName} ${Type} )
    SET_TARGET_PROPERTIES ( ${projectName} PROPERTIES FOLDER ${filter} )
    project( ${filter} )
    add_subdirectory( ${projectName} )
endfunction(AddLibrary)

add_subdirectory( library )
add_subdirectory( executable )