add_subdirectory(helloworld)
add_subdirectory(imgobfus)
add_subdirectory(basics)
add_subdirectory(memory_management)
add_subdirectory(forward_declare)
add_subdirectory(linkage)
add_subdirectory(pointer_reference)
add_subdirectory(perfect_forwarding)
add_subdirectory(multi_threading)
add_subdirectory(pointer_cast)
add_subdirectory(entry_point)
add_subdirectory(polymorphism)
add_subdirectory(multiInher_polymorph)
add_subdirectory(member_offset)
add_subdirectory(big_integer)
add_subdirectory(pmr_basic)
add_subdirectory(pmr_complex)
add_subdirectory(void_t)
add_subdirectory(constexpr)
add_subdirectory(reference_explain_1)
add_subdirectory(barrier)
add_subdirectory(trap_of_global_var)
add_subdirectory(bitflags)